--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>banana-morango</title>
+    <link
+      rel="icon"
+      href="https://st2.depositphotos.com/53447130/48079/v/600/depositphotos_480794608-stock-illustration-pixel-banana-image-bit-games.jpg"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
